--- a/src/SympleBlog/UserBundle/Resources/views/Default/index.html.twig
+++ b/src/SympleBlog/UserBundle/Resources/views/Default/index.html.twig
@@ -15,7 +15,7 @@
         
 {% endblock %}
 {% block footer %}
-    <span>Copyright SympleBlog&copy;</span>
+    <span>Copyright Symple&copy;</span>
 {% endblock %}
     
     
