--- a/src/SympleBlog/UserBundle/Resources/views/Default/wall.html.twig
+++ b/src/SympleBlog/UserBundle/Resources/views/Default/wall.html.twig
@@ -19,7 +19,7 @@
         </form>
 {% endblock %}
 {% block footer %}
-    <span>Copyright SympleBlog&copy;</span>
+    <span>Copyright Symple&copy;</span>
 {% endblock %}
     
     
